--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
       margin: 10px auto;
       min-width: 250px;
       max-width: 60%;
-      background-color: black;
+      background-color: white;
     }
 
      * {
@@ -85,7 +85,7 @@
       float: left;
       font-size: 16px;
     }
-    .addButton {
+    .addbutton {
       padding: 10px;
       width: 25%;
       background-color:#4000ff;
@@ -96,7 +96,7 @@
       transition: 0.3s;
       border-radius: 0;
     }
-    .addButton:hover {
+    .addbutton:hover {
       background-color: #bbb;
     }
     #clear-list{
